--- a/css/styles.css
+++ b/css/styles.css
@@ -67,12 +67,14 @@ body {
 
 /* Header section - Contacts */
 
+.header-contact {
+  font-style: normal;
+}
 .header-contact-link {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--slate-text-cl);
-  font-style: normal;
 }
 
 /* Hero section */
